# logviewer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: config.yaml  logviewer_config.yaml
src/: error.rs  fetcher.rs  helper.rs  indexer.rs  main.rs  model.rs  tasks.rs
src/api/: mod.rs
src/api/routes/: log.rs  mod.rs  stat.rs
src/api/serializers/: mod.rs
src/fetcher/: fetcher.rs  mod.rs  model.rs
src/model/: model.rs
src/store/: indexer.rs
static/: app.js  index.html
ui/: app.js  index.html  styles.css
