[package]
name = "logviewer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
actix-web = "4"
env_logger = "0.10.0"
actix-files = "0.6.2"
dotenv = "0.15.0"
tantivy = "0.19.2"
tempfile = "3.5.0"
